--- a/src/components/profile-info/style.scss
+++ b/src/components/profile-info/style.scss
@@ -11,8 +11,8 @@
         gap: 20px;
 
         .photoUrl {
-            height: 200px;
-            width: 200px;
+            height: auto;
+            width: auto;
             border-radius: 50%;
         }
 
